more reliable compilation