@@ -3,10 +3,36 @@
 Language Features Documentation: [karina-lang.org](https://karina-lang.org/Intro.html)
 
 # Karina Compiler 
- 
+
+Use at least Java 23 with `--enable-preview` flag.
+
+
+
+I would recommend to use the following java flags for development:
+
+```shell
+-ea 
+-Dkarina.out="resources/out/build.jar"  
+-Dkarina.source="resources/src/" 
+-Dkarina.console=true 
+-Dkarina.logging=none
+```
+
+> `karina.source` can point to your local development folder
+
+> `karina.out` points to the output jar file
+
+> `karina.console` will print the flight recorder output to the console.
+
+> `karina.logging` will set the logging level (`none`, `verbose` or `verbose_jvm`)
+
+> [!IMPORTANT]
+> Please set the `karina.logging` flag to `verbose` and upload the flight.txt file when you encounter a bug along with the source files
+
+
 
 - [Language Server](src/main/java/org/karina/lang/lsp)
-- [Standard Library](src/main/java/karina/)
+- [Standard Library](src/main/java/karina/lang/)
 - [Compiler](src/main/java/org/karina/lang/compiler)
 
 
